--- a/css/style.css
+++ b/css/style.css
@@ -87,11 +87,14 @@
   @media only screen and (max-width: 75em) {
     :root {
       font-size: 56.25%; } }
+  @media only screen and (max-width: 30em) {
+    :root {
+      font-size: 47%; } }
 
 body {
   box-sizing: border-box;
   padding: 2rem; }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     body {
       padding: 0; } }
 
@@ -152,13 +155,16 @@ body {
   background-clip: text;
   color: transparent;
   transition: all 0.2s; }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     .heading-secondary {
       font-size: 2.8rem; } }
   @media only screen and (max-width: 38.75em) {
     .heading-secondary {
-      font-size: 1.8rem;
+      font-size: 2.8rem;
       letter-spacing: 0; } }
+  @media only screen and (max-width: 30em) {
+    .heading-secondary {
+      font-size: 1.6rem; } }
   .heading-secondary:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0 1rem 1.5rem rgba(0, 0, 0, 0.2); }
@@ -308,7 +314,7 @@ body {
   @media only screen and (max-width: 75em) {
     .btn-text:link, .btn-text:visited {
       padding: 1rem 2rem; } }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     .btn-text:link, .btn-text:visited {
       letter-spacing: 0.1rem; } }
   @media only screen and (max-width: 38.75em) {
@@ -365,7 +371,7 @@ body {
   @media only screen and (max-width: 75em) {
     .btn-secondary:link, .btn-secondary:visited {
       padding: 1rem 1.5rem; } }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     .btn-secondary:link, .btn-secondary:visited {
       font-size: 1.3rem;
       padding: 1rem 1rem;
@@ -594,10 +600,11 @@ body {
   .card__price-value {
     font-size: 6rem;
     font-weight: 100; }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     .card {
       height: auto;
       background-color: #eee;
+      margin: 0 4rem;
       border-radius: 3px;
       box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
       /***************************
@@ -625,61 +632,60 @@ body {
         margin-bottom: 3rem; }
       .card__price-value {
         font-size: 4rem; } }
+  @media only screen and (max-width: 38.75em) {
+    .card {
+      margin: 0; } }
 
 .composition {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1rem solid #fff; }
+  position: relative; }
   .composition__photo {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transform: translateY(0.6rem); }
-    @media only screen and (max-width: 38.75em) {
-      .composition__photo {
-        width: 85%;
-        height: 85%; } }
-    .composition__photo--2 {
-      width: 60%;
-      height: 60%;
-      object-fit: cover;
-      position: absolute;
-      bottom: 15%;
-      right: -10%; }
-      @media only screen and (max-width: 68.75em) {
-        .composition__photo--2 {
-          right: -11%; } }
-      @media only screen and (max-width: 56.87em) {
-        .composition__photo--2 {
-          right: 11%;
-          bottom: 25%; } }
-      @media only screen and (max-width: 38.75em) {
-        .composition__photo--2 {
-          width: 50%;
-          height: 50%;
-          right: 5%;
-          bottom: 10%; } }
-  .composition::after {
-    content: "";
-    display: block;
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
     position: absolute;
-    top: 9%;
-    left: -7%;
-    border: 1rem solid #8c28b4cc;
-    width: 98%;
-    height: 102%;
-    z-index: -1; }
-    @media only screen and (max-width: 75em) {
-      .composition::after {
-        width: 90%; } }
-    @media only screen and (max-width: 56.87em) {
-      .composition::after {
-        display: none; } }
-    @media only screen and (max-width: 38.75em) {
-      .composition::after {
-        height: 104%; } }
+    z-index: 10;
+    transition: all 0.2s;
+    outline-offset: 2rem; }
+    @media only screen and (max-width: 59em) {
+      .composition__photo {
+        float: left;
+        position: relative;
+        width: 24%;
+        box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.4); } }
+    .composition__photo--p1 {
+      top: -4rem;
+      left: 15rem; }
+      @media only screen and (max-width: 59em) {
+        .composition__photo--p1 {
+          top: 0;
+          left: 1rem; } }
+    .composition__photo--p2 {
+      top: 9rem;
+      left: 0rem; }
+      @media only screen and (max-width: 59em) {
+        .composition__photo--p2 {
+          top: -2rem;
+          left: -2rem;
+          z-index: 100; } }
+    .composition__photo--p3 {
+      top: 9rem;
+      right: -3rem; }
+      @media only screen and (max-width: 59em) {
+        .composition__photo--p3 {
+          top: 1rem;
+          right: 3.8rem; } }
+    .composition__photo--p4 {
+      top: 20rem;
+      left: 15rem; }
+      @media only screen and (max-width: 59em) {
+        .composition__photo--p4 {
+          top: -1rem;
+          left: -8rem; } }
+    .composition__photo:hover {
+      outline: 1.5rem solid #c155c5;
+      transform: scale(1.05) translateY(-0.5rem);
+      z-index: 20; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.95); }
 
 .about {
   padding-left: 5rem; }
@@ -695,6 +701,9 @@ body {
 .experience {
   padding: 4rem;
   position: relative; }
+  @media only screen and (max-width: 38.75em) {
+    .experience {
+      padding: 1rem; } }
   .experience__photo {
     width: 100%;
     height: 100%;
@@ -704,7 +713,7 @@ body {
     height: 100%;
     object-fit: cover;
     transition: all 0.45s cubic-bezier(0.895, 0.03, 0.685, 0.22); }
-    @media only screen and (max-width: 56.87em) {
+    @media only screen and (max-width: 59em) {
       .experience__img {
         transform: scale(0.95);
         filter: grayscale(0.9) brightness(80%); } }
@@ -719,7 +728,7 @@ body {
     color: #eee;
     opacity: 0;
     transition: all 0.45s cubic-bezier(0.895, 0.03, 0.685, 0.22); }
-    @media only screen and (max-width: 56.87em) {
+    @media only screen and (max-width: 59em) {
       .experience__caption {
         opacity: 1;
         top: 30%; } }
@@ -750,7 +759,7 @@ body {
     transform: scaleY(0);
     transform-origin: top;
     transition: transform 0.45s cubic-bezier(0.895, 0.03, 0.685, 0.22); }
-    @media only screen and (max-width: 56.87em) {
+    @media only screen and (max-width: 59em) {
       .experience__content {
         transform: scaleY(1);
         top: 60%;
@@ -774,18 +783,18 @@ body {
   .experience:hover .experience__content {
     transform: scaleY(1);
     transform-origin: center; }
-    @media only screen and (max-width: 56.87em) {
+    @media only screen and (max-width: 59em) {
       .experience:hover .experience__content {
         opacity: 0; } }
   .experience:hover .experience__caption {
     opacity: 1; }
-    @media only screen and (max-width: 56.87em) {
+    @media only screen and (max-width: 59em) {
       .experience:hover .experience__caption {
         opacity: 0; } }
   .experience:hover .experience__img {
     transform: scale(0.95);
     filter: grayscale(0.9) brightness(80%); }
-    @media only screen and (max-width: 56.87em) {
+    @media only screen and (max-width: 59em) {
       .experience:hover .experience__img {
         transform: none;
         filter: none; } }
@@ -806,7 +815,7 @@ body {
 
 .form__group:not(:last-child) {
   margin-bottom: 2rem; }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     .form__group:not(:last-child) {
       margin-bottom: 1rem; } }
 
@@ -821,7 +830,7 @@ body {
   border: none;
   border-bottom: 0.3rem solid transparent;
   transition: all 0.3s; }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     .form__input {
       width: 100%; } }
   .form__input:focus {
@@ -852,7 +861,7 @@ body {
 .form__radio-group {
   display: inline-block;
   width: 48%; }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     .form__radio-group {
       width: 100%;
       margin-bottom: 2rem; } }
@@ -917,19 +926,18 @@ body {
     .services-box {
       padding: 3rem 1rem;
       margin: 0 0.5rem; } }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     .services-box {
       font-size: 1.8rem;
       margin: 0 auto;
-      padding: 7rem 3rem; } }
+      padding: 8rem 3rem; } }
   @media only screen and (max-width: 38.75em) {
     .services-box {
       font-size: 1.7rem;
-      padding: 7rem 2rem;
       margin: 0; } }
   @media only screen and (max-width: 30em) {
     .services-box {
-      padding: 4rem 2rem; } }
+      padding: 5rem 1rem; } }
   .services-box__icon {
     height: 6rem;
     width: 6rem;
@@ -1027,7 +1035,7 @@ body {
   border-radius: 3px;
   font-size: 1.6rem;
   transform: skewX(-12deg); }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     .story {
       width: 100%;
       padding: 4rem;
@@ -1090,17 +1098,20 @@ body {
   background-blend-mode: soft-light;
   position: relative;
   height: 40rem; }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     .tour__details {
       float: none;
       width: 100%; } }
+  @media only screen and (max-width: 30em) {
+    .tour__details {
+      height: auto; } }
 
 .tour__picture {
   height: 40rem;
   overflow: hidden;
   position: relative;
   transition: all 0.2s; }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     .tour__picture {
       float: none;
       width: 100%; } }
@@ -1147,7 +1158,7 @@ body {
     box-decoration-break: clone; }
     .tour__heading-span--1 {
       background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.7), rgba(255, 185, 0, 0.7)); }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     .tour__heading {
       font-size: 2.4rem; } }
   @media only screen and (max-width: 38.75em) {
@@ -1163,7 +1174,7 @@ body {
   font-size: 1.3rem;
   color: #f7f7f7;
   border-radius: 6% 0% 20% 21% / 20% 15% 0% 0%; }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     .footer {
       padding: 8rem 0; } }
   @media only screen and (max-width: 38.75em) {
@@ -1181,11 +1192,10 @@ body {
     justify-content: center;
     gap: 3rem;
     margin-bottom: 8rem; }
-    @media only screen and (max-width: 56.87em) {
+    @media only screen and (max-width: 59em) {
       .footer__social {
         margin-bottom: 6rem; } }
   .footer__icons {
-    display: inline-block;
     width: 5rem;
     height: 5rem;
     background-color: #8c28b4cc;
@@ -1195,6 +1205,11 @@ body {
     transition: all 0.3s; }
     .footer__icons:hover {
       transform: scale(1.1) rotate(0); }
+    @media only screen and (max-width: 30em) {
+      .footer__icons {
+        width: 3rem;
+        height: 3rem;
+        padding: 0.5rem; } }
   .footer__icon {
     position: relative;
     width: 3rem;
@@ -1206,11 +1221,15 @@ body {
     transform: rotate(-221deg); }
     .footer__icon:hover {
       transform: rotate(0); }
+    @media only screen and (max-width: 30em) {
+      .footer__icon {
+        width: 2rem;
+        height: 2rem; } }
   .footer__navigation {
     border-top: 2px solid #999;
     padding-top: 2rem;
     display: inline-block; }
-    @media only screen and (max-width: 56.87em) {
+    @media only screen and (max-width: 59em) {
       .footer__navigation {
         width: 100%;
         text-align: center; } }
@@ -1237,20 +1256,20 @@ body {
     padding-top: 2rem;
     width: 80%;
     float: right; }
-    @media only screen and (max-width: 56.87em) {
+    @media only screen and (max-width: 59em) {
       .footer__copyright {
         width: 100%;
         float: none; } }
 
 .row {
-  max-width: 114rem;
+  max-width: 120rem;
   margin: 0 auto; }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     .row {
       max-width: 60rem; } }
   @media only screen and (max-width: 38.75em) {
     .row {
-      padding: 0.4rem; } }
+      padding: 2rem; } }
 
 .grid {
   display: grid; }
@@ -1259,14 +1278,13 @@ body {
     row-gap: 6.4rem; }
   .grid--2-cols {
     grid-template-columns: repeat(2, 1fr); }
-    @media only screen and (max-width: 56.87em) {
+    @media only screen and (max-width: 59em) {
       .grid--2-cols {
         grid-template-columns: 1fr; } }
   .grid--3-cols {
     grid-template-columns: repeat(3, 1fr); }
-    @media only screen and (max-width: 56.87em) {
+    @media only screen and (max-width: 59em) {
       .grid--3-cols {
-        grid-template-columns: repeat(2, 1fr);
         grid-template-columns: 1fr; } }
   .grid--4-cols {
     grid-template-columns: repeat(4, 1fr); }
@@ -1411,14 +1429,14 @@ body {
 
 #section-about {
   padding: 20rem 0 30rem 0; }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     #section-about {
       padding: 10rem 0; } }
 
 #section-tours {
   padding: 20rem 0;
   margin-top: -5rem; }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     #section-tours {
       padding: 10rem 0; } }
 
@@ -1449,10 +1467,10 @@ body {
       background-image: linear-gradient(-90deg, rgba(238, 238, 238, 0.9) 0%, rgba(238, 238, 238, 0.9) 65%, transparent 65%), url(../img/city.jpg);
       background-size: cover;
       margin: 0 2rem; } }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     .book {
       background-image: linear-gradient(-90deg, rgba(238, 238, 238, 0.9) 0%, rgba(238, 238, 238, 0.9) 100%), url(../img/city.jpg); } }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     .book {
       margin: 0; } }
   .book__form {
@@ -1462,7 +1480,7 @@ body {
     @media only screen and (max-width: 75em) {
       .book__form {
         width: 65%; } }
-    @media only screen and (max-width: 56.87em) {
+    @media only screen and (max-width: 59em) {
       .book__form {
         width: 100%;
         padding: 2rem; } }
@@ -1473,7 +1491,7 @@ body {
   background-image: linear-gradient(to right, rgba(140, 40, 180, 0.9), rgba(140, 40, 180, 0.9)), url(../img/nature1.jpg);
   background-size: cover;
   background-position: center; }
-  @media only screen and (max-width: 56.87em) {
+  @media only screen and (max-width: 59em) {
     #section-experience {
       padding: 10rem 0; } }
 
