--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,6 +10,9 @@
   @include respond(tab-land) {
     font-size: 56.25%;
   }
+  @include respond(small-phone) {
+    font-size: 47%;
+  }
 }
 body {
   box-sizing: border-box;
