--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -49,37 +49,6 @@ body {
   }
 }
 
-// .heading-secondary {
-//   font-size: 3rem;
-//   padding: 1rem 0;
-//   font-weight: 700;
-//   display: inline-block;
-//   letter-spacing: 0.5rem;
-//   text-transform: uppercase;
-//   background-image: linear-gradient(
-//     to right,
-//     $color-primary-dark,
-//     $color-primary-dark
-//   );
-//   -webkit-background-clip: text;
-//   background-clip: text;
-//   color: transparent;
-
-//   position: relative;
-//   transition: all 0.2s;
-
-//   &::after {
-//     content: "";
-//     display: inline-block;
-//     position: absolute;
-//     left: 0;
-//     bottom: 0;
-//     width: 35%;
-//     height: 0.4rem;
-//     background-color: $color-primary-dark;
-//   }
-// }
-
 .heading-secondary {
   display: inline-block;
   font-size: 3.5rem;
@@ -101,8 +70,11 @@ body {
     font-size: 2.8rem;
   }
   @include respond(phone) {
-    font-size: 1.8rem;
+    font-size: 2.8rem;
     letter-spacing: 0;
+  }
+  @include respond(small-phone) {
+    font-size: 1.6rem;
   }
 
   &:hover {
@@ -126,33 +98,3 @@ body {
     line-height: 1.4;
   }
 }
-// .heading-secondary {
-//   font-size: 3rem;
-//   padding: 1rem 0;
-//   font-weight: 700;
-//   display: inline-block;
-//   letter-spacing: 0.5rem;
-//   text-transform: uppercase;
-//   background-image: linear-gradient(
-//     to right,
-//     $color-primary-dark,
-//     $color-primary-dark
-//   );
-//   -webkit-background-clip: text;
-//   background-clip: text;
-//   color: transparent;
-
-//   position: relative;
-//   transition: all 0.2s;
-
-//   &::after {
-//     content: "";
-//     display: inline-block;
-//     position: absolute;
-//     left: 0;
-//     bottom: 0;
-//     width: 35%;
-//     height: 0.4rem;
-//     background-color: $color-primary-dark;
-//   }
-// }
