--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -1,66 +1,142 @@
+// .composition {
+//   position: relative;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   border: 1rem solid $color-white;
+
+//   &__photo {
+//     width: 100%;
+//     height: 100%;
+//     object-fit: cover;
+//     transform: translateY(0.6rem);
+
+//     @include respond(phone) {
+//       width: 85%;
+//       height: 85%;
+//     }
+//     &--2 {
+//       width: 60%;
+//       height: 60%;
+//       object-fit: cover;
+//       position: absolute;
+//       bottom: 15%;
+//       right: -10%;
+//       @include respond(tab-land-small) {
+//         right: -11%;
+//       }
+//       @include respond(tab-port) {
+//         right: 11%;
+//         bottom: 25%;
+//       }
+//       @include respond(phone) {
+//         width: 50%;
+//         height: 50%;
+//         right: 5%;
+//         bottom: 10%;
+//       }
+//     }
+//   }
+//   &::after {
+//     content: "";
+//     display: block;
+//     position: absolute;
+//     top: 9%;
+//     left: -7%;
+//     border: 1rem solid $color-primary-dark;
+//     width: 98%;
+//     height: 102%;
+//     z-index: -1;
+//     @include respond(tab-land) {
+//       width: 90%;
+//     }
+
+//     @include respond(tab-port) {
+//       //left: 5%;
+//       display: none;
+//     }
+//     @include respond(phone) {
+//       height: 104%;
+//     }
+//   }
+// }
+
 .composition {
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1rem solid $color-white;
 
   &__photo {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transform: translateY(0.6rem);
+    width: 55%;
 
-    @include respond(phone) {
-      width: 85%;
-      height: 85%;
-    }
-    &--2 {
-      width: 60%;
-      height: 60%;
-      object-fit: cover;
-      position: absolute;
-      bottom: 15%;
-      right: -10%;
-      @include respond(tab-land-small) {
-        right: -11%;
-      }
-      @include respond(tab-port) {
-        right: 11%;
-        bottom: 25%;
-      }
-      @include respond(phone) {
-        width: 50%;
-        height: 50%;
-        right: 5%;
-        bottom: 10%;
-      }
-    }
-  }
-  &::after {
-    content: "";
-    display: block;
+    box-shadow: 0 1.5rem 4rem rgba($color-deep, 0.4);
     position: absolute;
-    top: 9%;
-    left: -7%;
-    border: 1rem solid $color-primary-dark;
-    width: 98%;
-    height: 102%;
-    z-index: -1;
-    @include respond(tab-land) {
-      width: 90%;
-    }
+    z-index: 10;
+    transition: all 0.2s;
+    outline-offset: 2rem;
 
     @include respond(tab-port) {
-      //left: 5%;
-      display: none;
+      float: left;
+      position: relative;
+      width: 24%;
+      box-shadow: 0 1.5rem 3rem rgba($color-deep, 0.4);
     }
-    @include respond(phone) {
-      height: 104%;
+
+    &--p1 {
+      top: -4rem;
+      left: 15rem;
+
+      @include respond(tab-port) {
+        top: 0;
+        left: 1rem;
+        // transform: scale(1.4);
+      }
+    }
+    &--p2 {
+      top: 9rem;
+      left: 0rem;
+
+      @include respond(tab-port) {
+        top: -2rem;
+        left: -2rem;
+        z-index: 100;
+        // transform: scale(1.4);
+      }
+    }
+    &--p3 {
+      top: 9rem;
+      right: -3rem;
+
+      @include respond(tab-port) {
+        top: 1rem;
+        right: 3.8rem;
+        // transform: scale(1.4);
+      }
+
+      // @include respond(tab-land) {
+      //   right: 0;
+      // }
+    }
+    &--p4 {
+      top: 20rem;
+      left: 15rem;
+
+      @include respond(tab-port) {
+        top: -1rem;
+        left: -8rem;
+        // transform: scale(1.4);
+      }
+    }
+
+    &:hover {
+      outline: 1.5rem solid $color-primary;
+      transform: scale(1.05) translateY(-0.5rem);
+      z-index: 20;
     }
   }
-}
 
+  &:hover &__photo:not(:hover) {
+    transform: scale(0.95);
+  }
+}
 .about {
   padding-left: 5rem;
   @include respond(tab-land) {
