--- a/sass/components/_experiences.scss
+++ b/sass/components/_experiences.scss
@@ -1,6 +1,9 @@
 .experience {
   padding: 4rem;
   position: relative;
+  @include respond(phone) {
+    padding: 1rem;
+  }
   &__photo {
     width: 100%;
     height: 100%;
