--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -83,7 +83,7 @@ body {
   }
 }
 .heading-tertiary {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   text-transform: uppercase;
   font-weight: 700;
   @include respond(small-phone) {
@@ -91,8 +91,12 @@ body {
   }
 }
 .paragraph {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   text-align: justify;
+  margin-bottom: 3rem;
+  // &:not(:last-of-type) {
+  //   margin-bottom: 3rem;
+  // }
   @include respond(small-phone) {
     font-size: 1.6rem;
     line-height: 1.4;
