--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,18 +1,20 @@
 #section-about {
   padding: 20rem 0 30rem 0;
+  padding: 15rem 0;
+  margin-top: -15vh;
   @include respond(tab-port) {
     padding: 10rem 0;
   }
 }
 #section-tours {
-  padding: 20rem 0;
-  margin-top: -5rem;
+  padding: 20rem 0 0 0;
+  margin-top: -10rem;
   @include respond(tab-port) {
     padding: 10rem 0;
   }
 }
 .section-popular-tours {
-  padding: 20rem 0;
+  padding: 15rem 0;
 }
 #section-services {
   background-image: linear-gradient(
