--- a/css/style.css
+++ b/css/style.css
@@ -226,9 +226,9 @@ body {
   color: #fff !important; }
 
 .btn:link, .btn:visited {
+  font-size: 1.6rem;
   display: inline-block;
   text-decoration: none;
-  font-size: 1.6rem;
   padding: 1.5rem 4rem;
   border: none;
   border-radius: 10rem;
@@ -429,14 +429,15 @@ body {
   animation: none; }
 
 .btn-text1:link, .btn-text1:visited {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   padding: 1rem 0.5rem;
+  padding: 3px;
   display: inline-block;
   font-weight: 700;
-  color: #333;
+  color: #c155c5;
   text-transform: uppercase;
   text-decoration: none;
-  border-bottom: 0.3rem solid #c155c5;
+  border-bottom: 0.1rem solid #c155c5;
   position: relative;
   z-index: 2;
   overflow: hidden;
