--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,9 +1,9 @@
 .btn {
   &:link,
   &:visited {
+    font-size: $default-font-size;
     display: inline-block;
     text-decoration: none;
-    font-size: 1.6rem;
     padding: 1.5rem 4rem;
     border: none;
     border-radius: 10rem;
@@ -252,14 +252,15 @@
 .btn-text1 {
   &:link,
   &:visited {
-    font-size: 1.4rem;
+    font-size: $default-font-size;
     padding: 1rem 0.5rem;
+    padding: 3px;
     display: inline-block;
     font-weight: 700;
-    color: $color-grey-dark-3;
+    color: $color-primary;
     text-transform: uppercase;
     text-decoration: none;
-    border-bottom: 0.3rem solid $color-primary;
+    border-bottom: 0.1rem solid $color-primary;
     position: relative;
     z-index: 2;
     overflow: hidden;
